--- a/index.html
+++ b/index.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8" />
-        <title>Run Buddy</title>
-        <link rel="stylesheet" href="./assets/css/style.css" />
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <title>Run Buddy</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+</head>
 
-    <body>
-        <!-- navigation -->
-        <header>
-            <h1>
-                <a href="./">RUN BUDDY</a>
-            </h1>
-            <nav> 
-                <!--Unordered list elements-->
-                <ul>
-                    <!--LIst item element-->
-                    <li>
-                        <!--Anchor element-->
-                        <a href="#what-we-do">What We Do</a>
-                    </li>
-                    <li>
-                        <a href="#what-you-do">What You Do</a>
-                    </li>
-                    <li>
-                        <a href="#your-trainers">Your Trainers</a>
-                    </li>
-                    <li>
-                        <a href="#reach-out">Reach Out</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
+<body>
+    <!-- navigation -->
+    <header>
+        <h1>
+            <a href="./index.html">RUN BUDDY</a>
+        </h1>
+        <nav>
+            <!--Unordered list elements-->
+            <ul>
+                <!--LIst item element-->
+                <li>
+                    <!--Anchor element-->
+                    <a href="#what-we-do">What We Do</a>
+                </li>
+                <li>
+                    <a href="#what-you-do">What You Do</a>
+                </li>
+                <li>
+                    <a href="#your-trainers">Your Trainers</a>
+                </li>
+                <li>
+                    <a href="#reach-out">Reach Out</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-        <!-- hero section -->
-        <section class="hero">
-            <div class="hero-form">
-              <h3>Get Started Today</h3>
-              <p>Fill out this form and one of our trainers will schedule a consult</p>
-              <!--Add form element-->
-              <form>
+    <!-- hero section -->
+    <section class="hero">
+        <div class="hero-form">
+            <h3>Get Started Today</h3>
+            <p>Fill out this form and one of our trainers will schedule a consult</p>
+            <!--Add form element-->
+            <form>
                 <label for="name">Enter full name:</label>
                 <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
                 <label for="email">Enter email address:</label>
-                <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" /> 
+                <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
                 <label for="phone">Enter a telephone number:</label>
                 <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
                 <p>
@@ -55,47 +55,73 @@
                     <label for="trainer-no">No</label>
                 </p>
                 <p>
-                   <label for="checkbox" >
-                     I acknowledge that I am at least 18 years of age.
-                   </label>
+                    <label for="checkbox">
+                        I acknowledge that I am at least 18 years of age.
+                    </label>
                     <input type="checkbox" name="age-confirm" id="checkbox" />
                 </p>
                 <button type="submit">
                     Get Running!
                 </button>
-              </form>    
-            </div>
-        </section>
-        <!--end hero-->
+            </form>
+        </div>
+    </section>
+    <!--end hero-->
 
-        <!-- "what we do" section -->
-        <section>
-            <h2>What We Do</h2>
-        </section>
+    <!-- "what we do" section -->
+    <section id="what-we-do">
+        <h2>What We Do</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium labore reprehenderit beatae optio culpa eum velit voluptatum eligendi quisquam, sed incidunt dolores facere cupiditate tempore officiis doloribus quis. Deleniti, quo?
+        </p>
+    </section>
 
-        <!-- "what you do" section -->
-        <section>
-            <h2>What You Do</h2>
-        </section>
+    <!-- "what you do" section -->
+    <section id="what-you-do">
+        <h2>What You Do</h2>
 
-        <!-- "meet the trainer" section -->
-        <section>
-            <h2>Meet The Trainers</h2>
-        </section>
+        <div>
+            <img src="./assets/images/step-1.svg" alt="" />
+            <h3>Step 1: Fill Out the Form Above.</h3>
+            <p>You're already here, so why not?</p>
+        </div>
+        
+        <div>
+            <img src="./assets/images/step-2.svg" alt="">
+            <h3>Step 2: Consult with One of Our Trainers.</h3>
+            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+        </div>
 
-        <!-- "reach out" section -->
-        <section>
-            <h2>Reach Out</h2>
-        </section>
+        <div>
+            <img src="./assets/images/step-3.svg" alt="">
+            <h3>Step 3: Get Running.</h3>
+            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+        </div>
 
-        <!-- footer -->
-        <footer>
-            <h2>❤️ Made with love by Run Buddy.</h2>
-            <div>
-                <a href="#">Read Our Privacy Policy</a><br />
-                &copy; 2019 Run Buddy, Inc.
-            </div>
-        </footer>
-    </body>
+        <div>
+            <img src="./assets/images/step-4.svg" alt="">
+            <h3>Step 4: See Results.</h3>
+            <p>Bi-weekly checks with your trainer will keep you focused.</p>
+        </div>
+    </section>
+
+    <!-- "meet the trainer" section -->
+    <section>
+        <h2>Meet The Trainers</h2>
+    </section>
+
+    <!-- "reach out" section -->
+    <section>
+        <h2>Reach Out</h2>
+    </section>
+
+    <!-- footer -->
+    <footer>
+        <h2>❤️ Made with love by Run Buddy.</h2>
+        <div>
+            <a href="#">Read Our Privacy Policy</a><br />
+            &copy; 2019 Run Buddy, Inc.
+        </div>
+    </footer>
+</body>
 
 </html>
