style what we do section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!--end hero-->
 
     <!-- "what we do" section -->
-    <section id="what-we-do">
+    <section id="what-we-do" class="intro">
         <h2>What We Do</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium labore reprehenderit beatae optio culpa eum velit voluptatum eligendi quisquam, sed incidunt dolores facere cupiditate tempore officiis doloribus quis. Deleniti, quo?
         </p>
