--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- navigation -->
     <header>
         <h1>
-            <a href="./index.html">RUN BUDDY</a>
+            <a href="/">RUN BUDDY</a>
         </h1>
         <nav>
             <!--Unordered list elements-->
@@ -70,36 +70,36 @@
 
     <!-- "what we do" section -->
     <section id="what-we-do" class="intro">
-        <h2>What We Do</h2>
+        <h2 class="section-title primary-border">What We Do</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium labore reprehenderit beatae optio culpa eum velit voluptatum eligendi quisquam, sed incidunt dolores facere cupiditate tempore officiis doloribus quis. Deleniti, quo?
         </p>
     </section>
 
     <!-- "what you do" section -->
-    <section id="what-you-do">
-        <h2>What You Do</h2>
+    <section id="what-you-do" class="steps">
+        <h2 class="section-title secondary-border">What You Do</h2>
 
         <div>
             <img src="./assets/images/step-1.svg" alt="" />
-            <h3>Step 1: Fill Out the Form Above.</h3>
+            <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
             <p>You're already here, so why not?</p>
         </div>
         
         <div>
             <img src="./assets/images/step-2.svg" alt="">
-            <h3>Step 2: Consult with One of Our Trainers.</h3>
+            <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
             <p>Are you here to build muscle, lose weight, or just feel good?</p>
         </div>
 
         <div>
             <img src="./assets/images/step-3.svg" alt="">
-            <h3>Step 3: Get Running.</h3>
+            <h3>Step 3: <span>Running.</span></h3>
             <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
         </div>
 
         <div>
             <img src="./assets/images/step-4.svg" alt="">
-            <h3>Step 4: See Results.</h3>
+            <h3>Step 4: <span>See Results.</span></h3>
             <p>Bi-weekly checks with your trainer will keep you focused.</p>
         </div>
     </section>
