--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <!-- navigation -->
     <header>
         <h1>
-            <a href="/">RUN BUDDY</a>
+            <a href="index.html">
+                RUN BUDDY
+            </a>
         </h1>
         <nav>
             <!--Unordered list elements-->
@@ -70,43 +72,79 @@
 
     <!-- "what we do" section -->
     <section id="what-we-do" class="intro">
-        <h2 class="section-title primary-border">What We Do</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium labore reprehenderit beatae optio culpa eum velit voluptatum eligendi quisquam, sed incidunt dolores facere cupiditate tempore officiis doloribus quis. Deleniti, quo?
+        <h2 class="section-title primary-border">
+            What We Do
+        </h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium labore reprehenderit beatae optio culpa
+            eum velit voluptatum eligendi quisquam, sed incidunt dolores facere cupiditate tempore officiis doloribus
+            quis. Deleniti, quo?
         </p>
     </section>
 
     <!-- "what you do" section -->
     <section id="what-you-do" class="steps">
-        <h2 class="section-title secondary-border">What You Do</h2>
+        <h2 class="section-title secondary-border">
+            What You Do
+        </h2>
 
         <div>
             <img src="./assets/images/step-1.svg" alt="" />
             <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
             <p>You're already here, so why not?</p>
         </div>
-        
+
         <div>
-            <img src="./assets/images/step-2.svg" alt="">
+            <img src="./assets/images/step-2.svg" alt="" />
             <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
             <p>Are you here to build muscle, lose weight, or just feel good?</p>
         </div>
 
         <div>
-            <img src="./assets/images/step-3.svg" alt="">
+            <img src="./assets/images/step-3.svg" alt="" />
             <h3>Step 3: <span>Running.</span></h3>
             <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
         </div>
 
         <div>
-            <img src="./assets/images/step-4.svg" alt="">
+            <img src="./assets/images/step-4.svg" alt="" />
             <h3>Step 4: <span>See Results.</span></h3>
             <p>Bi-weekly checks with your trainer will keep you focused.</p>
         </div>
     </section>
 
     <!-- "meet the trainer" section -->
-    <section>
-        <h2>Meet The Trainers</h2>
+    <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">
+            Meet The Trainers
+        </h2>
+        <article class="trainer">
+            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+            <div class="trainer-bio text-left">
+                <h3>Arron Stephens</h3>
+                <h4>Speed / Strength</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae amet minus quisquam laborum nihil. Dolorum deleniti, distinctio et laborum doloribus non earum doloremque est ipsum nemo, voluptatem minima odio amet.
+                </p>
+            </div>
+        </article>
+
+        <article class="trainer">
+            <div class="trainer-bio text-right">
+                <h3>Joanna Gill</h3>
+                <h4>Endurance</h4>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas distinctio fugit quasi veritatis accusantium dicta similique hic sed ab pariatur nam repudiandae, quod modi nisi tempora optio velit, quo doloribus?</p>
+            </div>
+            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+        </article>
+
+        <article class="trainer">
+            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+            <div class="trainer-bio text-left">
+                <h3>Harry Smith</h3>
+                <h4>Strenght</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, consectetur vitae? Non, nulla! In consequuntur nemo, obcaecati quae aut veritatis nesciunt officiis nulla voluptas quis. Vitae iure adipisci dolorum neque.</p>
+            </div>
+        </article>
+
     </section>
 
     <!-- "reach out" section -->
