--- a/index.html
+++ b/index.html
@@ -148,17 +148,14 @@
     </section>
 
     <!-- "reach out" section -->
-    <section>
-        <h2>Reach Out</h2>
+    <section id="reach-out" class="contact">
+        <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13349.773150258785!2d-111.55875434999999!3d33.22868835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872a4b8e9ce8a5c9%3A0x2c756bf9aa541cb2!2s37848%20N%20Amy%20Ln%2C%20Queen%20Creek%2C%20AZ%2085140!5e0!3m2!1sen!2sus!4v1639701954510!5m2!1sen!2sus"
-             width="400" 
-             height="400" 
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13349.773150258785!2d-111.55875434999999!3d33.22868835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872a4b8e9ce8a5c9%3A0x2c756bf9aa541cb2!2s37848%20N%20Amy%20Ln%2C%20Queen%20Creek%2C%20AZ%2085140!5e0!3m2!1sen!2sus!4v1639701954510!5m2!1sen!2sus" 
              style="border:0;" 
              allowfullscreen="" 
              loading="lazy">
             </iframe>
-
             <div>
                 <h3>Run Buddy</h3>
                 <p>Any questions or concerns before signing up?
@@ -173,7 +170,6 @@
                     E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
                 </address>
             </div>
-
         </div>
     </section>
 
