add flexbox to main sections

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     <section class="hero">
         <div class="hero-cta">
             <h2>Start Building Habits.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolorum perspiciatis aperiam? Vitae molestias enim eum harum culpa, ex, delectus labore, autem eaque id adipisci qui nemo placeat a quidem!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolorum perspiciatis aperiam? Vitae
+                molestias enim eum harum culpa, ex, delectus labore, autem eaque id adipisci qui nemo placeat a quidem!
+            </p>
         </div>
         <div class="hero-form">
             <h3>Get Started Today</h3>
@@ -76,20 +78,28 @@
 
     <!-- "what we do" section -->
     <section id="what-we-do" class="intro">
-        <h2 class="section-title primary-border">
-            What We Do
-        </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium labore reprehenderit beatae optio culpa
-            eum velit voluptatum eligendi quisquam, sed incidunt dolores facere cupiditate tempore officiis doloribus
-            quis. Deleniti, quo?
-        </p>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">
+                What We Do
+            </h2>
+        </div>
+        <div class="flex-row">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium labore reprehenderit beatae optio
+                culpa
+                eum velit voluptatum eligendi quisquam, sed incidunt dolores facere cupiditate tempore officiis
+                doloribus
+                quis. Deleniti, quo?
+            </p>
+        </div>
     </section>
 
     <!-- "what you do" section -->
     <section id="what-you-do" class="steps">
-        <h2 class="section-title secondary-border">
-            What You Do
-        </h2>
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">
+                What You Do
+            </h2>
+        </div>
 
         <div>
             <img src="./assets/images/step-1.svg" alt="" />
@@ -118,15 +128,19 @@
 
     <!-- "meet the trainer" section -->
     <section id="your-trainers" class="trainers">
-        <h2 class="section-title primary-border">
-            Meet The Trainers
-        </h2>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">
+                Meet The Trainers
+            </h2>
+        </div>
         <article class="trainer">
             <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
             <div class="trainer-bio text-left">
                 <h3>Arron Stephens</h3>
                 <h4>Speed / Strength</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae amet minus quisquam laborum nihil. Dolorum deleniti, distinctio et laborum doloribus non earum doloremque est ipsum nemo, voluptatem minima odio amet.
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae amet minus quisquam laborum
+                    nihil. Dolorum deleniti, distinctio et laborum doloribus non earum doloremque est ipsum nemo,
+                    voluptatem minima odio amet.
                 </p>
             </div>
         </article>
@@ -135,17 +149,22 @@
             <div class="trainer-bio text-right">
                 <h3>Joanna Gill</h3>
                 <h4>Endurance</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas distinctio fugit quasi veritatis accusantium dicta similique hic sed ab pariatur nam repudiandae, quod modi nisi tempora optio velit, quo doloribus?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas distinctio fugit quasi veritatis
+                    accusantium dicta similique hic sed ab pariatur nam repudiandae, quod modi nisi tempora optio velit,
+                    quo doloribus?</p>
             </div>
             <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
         </article>
 
         <article class="trainer">
-            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+            <img src="./assets/images/trainer-3.jpg"
+                alt="Harry Smith wearing a headband and lifting comically small pink weights" />
             <div class="trainer-bio text-left">
                 <h3>Harry Smith</h3>
                 <h4>Strenght</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, consectetur vitae? Non, nulla! In consequuntur nemo, obcaecati quae aut veritatis nesciunt officiis nulla voluptas quis. Vitae iure adipisci dolorum neque.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, consectetur vitae? Non, nulla! In
+                    consequuntur nemo, obcaecati quae aut veritatis nesciunt officiis nulla voluptas quis. Vitae iure
+                    adipisci dolorum neque.</p>
             </div>
         </article>
 
@@ -153,12 +172,13 @@
 
     <!-- "reach out" section -->
     <section id="reach-out" class="contact">
-        <h2 class="section-title secondary-border">Reach Out</h2>
+        <div class="" flex-row>
+            <h2 class="section-title secondary-border">Reach Out</h2>
+        </div>
         <div class="contact-info">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13349.773150258785!2d-111.55875434999999!3d33.22868835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872a4b8e9ce8a5c9%3A0x2c756bf9aa541cb2!2s37848%20N%20Amy%20Ln%2C%20Queen%20Creek%2C%20AZ%2085140!5e0!3m2!1sen!2sus!4v1639701954510!5m2!1sen!2sus" 
-             style="border:0;" 
-             allowfullscreen="" 
-             loading="lazy">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13349.773150258785!2d-111.55875434999999!3d33.22868835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872a4b8e9ce8a5c9%3A0x2c756bf9aa541cb2!2s37848%20N%20Amy%20Ln%2C%20Queen%20Creek%2C%20AZ%2085140!5e0!3m2!1sen!2sus!4v1639701954510!5m2!1sen!2sus"
+                style="border:0;" allowfullscreen="" loading="lazy">
             </iframe>
             <div class="contact-form">
                 <h3>Contact Us</h3>
